# python-fastapi-skeleton

./: .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  Dockerfile2  Dockerfile3  pyproject.toml
.deploy/: deployment.yaml  service.yaml
src/gen_ai_service/: app.py  config.py  main.py
src/gen_ai_service/api/: routes.py
src/gen_ai_service/api/cron/: dependencies.py  routes.py
src/gen_ai_service/api/health/: routes.py
src/gen_ai_service/helpers/: exception_handler_route.py  logger.py
src/gen_ai_service/llms/cron/: cron.py
src/gen_ai_service/middleware/: correlation_id.py
src/python_project_skeleton/: app.py  config.py  main.py  route_error_handler.py
src/python_project_skeleton/api/: routes.py
src/python_project_skeleton/api/cron/: dependencies.py  models.py
src/python_project_skeleton/helpers/: helpers.py
src/python_project_skeleton/llms/cron/: cron.py
src/python_project_skeleton/logger/: logger.py
src/python_project_skeleton/middleware/: correlation_id.py
tests/: test_cron_routes.py  test_main.py
