[tool.poetry]
name = "python-project-skeleton"
version = "0.1.0"
description = ""
authors = ["Daniel Soifer <daniel.soifer@codefresh.io>"]


[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
openai = "^0.27.8"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
langchain = "~0.0.232"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88  # this is the default

[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "I",
    "B"
]
ignore = []
line-length = 88  # same as Black (this is the default)

