[tool.poetry]
name = "python-project-skeleton"
version = "0.1.0"
description = ""
authors = ["Daniel Soifer <daniel.soifer@codefresh.io>"]


[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
openai = "^0.27.8"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
langchain = "~0.0.232"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pre-commit = "^3.3.3"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.black]
line-length = 88  # this is the default
preview = true

[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "I",
    "B"
]
src = ["src", "tests"]
ignore = []
line-length = 88  # same as Black (this is the default)

